[package]
name = "mossy_behind"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"
futures = "0.3"
chrono = "0.4.31"

[dependencies.mongodb]
version = "2.6.0"
default-features=false
features = ["tokio-runtime"]

[dependencies.rocket]
version = "=0.5.0-rc.3"
features = ["json"]

[dependencies.bson]
features = ["chrono-0_4"]